@@ -6,7 +6,6 @@ import com.agh.miss.parametersObject.Point;
 
 import java.util.*;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class World implements IWorldMap {
     public final int MAP_WIDTH;
@@ -14,20 +13,32 @@ public class World implements IWorldMap {
     public final double infectionChance;
     public final double recoveryChance;
     public final int recoveryTime;
+    public final double deathChance;
     private final Point leftBottomCorner;
     private final Point rightTopCorner;
+    private final int startPeopleNumber;
 
     private static final Random random = new Random();
 
     private final HashMap<Point, LinkedList<Person>> people = new HashMap<>();
     private final HashMap<Point, Trace> traces = new HashMap<>();
 
-    public World(int width, int height, double infectionChance, double recoveryChance, int recoveryTime) {
+    public World(
+            int width,
+            int height,
+            int startPeopleNumber,
+            double infectionChance,
+            double recoveryChance,
+            int recoveryTime,
+            double deathChance
+    ) {
         this.MAP_WIDTH = width;
         this.MAP_HEIGHT = height;
+        this.startPeopleNumber = startPeopleNumber;
         this.infectionChance = infectionChance;
         this.recoveryChance = recoveryChance;
         this.recoveryTime = recoveryTime;
+        this.deathChance = deathChance;
         this.leftBottomCorner = new Point(0, 0);
         this.rightTopCorner = new Point(width, height);
     }
@@ -82,7 +93,7 @@ public class World implements IWorldMap {
     @Override
     public void run() {
         List<Person> allPeople = people.values().stream()
-                .flatMap(Collection::stream).collect(Collectors.toList());
+                .flatMap(Collection::stream).toList();
 
         allPeople.forEach(Person::changeDirection);  //Every person must turn
         allPeople.forEach(Person::move);             //Every person must move
@@ -104,13 +115,14 @@ public class World implements IWorldMap {
     public int numberPeopleOnMap() {
         return (int) people.values().stream()
                 .flatMap(Collection::stream)
+                .filter(Predicate.not(Person::isDead))
                 .count();
     }
 
     public int numberHealthyPeopleOnMap() {
         return (int) people.values().stream()
                 .flatMap(Collection::stream)
-                .filter(Predicate.not(Person::isInfected))
+                .filter(Person::isHealthy)
                 .count();
     }
 
@@ -128,43 +140,67 @@ public class World implements IWorldMap {
                 .count();
     }
 
+    public int numberDeadPeople() {
+        return startPeopleNumber - numberPeopleOnMap();
+    }
+
     public void infectPeople() {
         traces.forEach((position, trace) -> {
-            if (people.get(position) != null && people.get(position).stream().anyMatch(Person::isInfected)) {
+            if (people.get(position) != null) {
                 people.get(position).stream()
-                        .filter(Predicate.not(Person::isInfected))
-                        .filter(Predicate.not(Person::isCured))
-                        .forEach(person -> {
-                            if (random.nextDouble() * 100 <= infectionChance * trace.getTracePower() / 100)
-                                person.infect();
-                        });
+                        .filter(Person::isHealthy)
+                        .filter(person -> random.nextDouble() * 100 <= infectionChance * trace.getTracePower() / 100)
+                        .forEach(Person::infect);
             }
         });
     }
 
     public void recoverPeople() {
         people.forEach((position, listOfPeople) -> listOfPeople.stream()
-                    .filter(Person::isInfected)
-                    .forEach(person -> {
-                        if (person.infectionTime() >= recoveryTime && random.nextDouble() * 100 <= recoveryChance)
-                            person.cure();
-                        else
-                            person.incInfectionTime();
-                    })
+                .filter(Person::isInfected)
+                .forEach(person -> {
+                    if (person.infectionTime() >= recoveryTime && random.nextDouble() * 100 <= recoveryChance)
+                        person.cure();
+                    else
+                        person.incInfectionTime();
+                })
         );
     }
 
-    public void putStartPeople(int peopleNumber, double percentageOfInfectedPeople) {
+    public void killPeople() {
+        people.forEach((position, listOfPeople) -> listOfPeople.stream()
+                .filter(Person::isInfected)
+                .filter(person -> (person.infectionTime() >= recoveryTime && random.nextDouble() * 100 <= deathChance))
+                .forEach(Person::die)
+        );
+    }
+
+    public void removeDeadPeople() {
+        List<Person> allPeople = people.values().stream()
+                .flatMap(Collection::stream).toList();
+
+        allPeople.stream()
+                .filter(Person::isDead)
+                .forEach(person -> {
+                    this.people.get(person.getPosition()).remove(person);
+                    if (this.people.get(person.getPosition()).isEmpty()) {
+                        this.people.remove(person.getPosition());
+                    }
+                }
+        );
+    }
+
+    public void putStartPeople(double percentageOfInfectedPeople) {
         Person person;
         Person.HealthState healthState;
-        for (int i = 0; i < peopleNumber; i++) {
+        for (int i = 0; i < startPeopleNumber; i++) {
             int x, y;
             do {
                 x = random.nextInt(rightTopCorner.x);
                 y = random.nextInt(rightTopCorner.y);
             } while (isOccupied(new Point(x, y)));
 
-            if (random.nextDouble() * 100 <= percentageOfInfectedPeople)
+            if (i < startPeopleNumber * percentageOfInfectedPeople / 100)
                 healthState = Person.HealthState.INFECTED;
             else
                 healthState = Person.HealthState.HEALTHY;
